fix a lot of little things on design, style, html to display homepage correctly on iphone x

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
 
   // Headers
 
+body {
+  background: $light-blue;
+  padding: 16px;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: $headers-font;
   font-style: normal;
